@@ -1,6 +1,13 @@
 2010-01-13  Doug Kwan  <dougkwan@google.com>
 
 	* arm.cc (Arm_relobj::section_needs_reloc_stub_scanning,
+	Arm_relobj::scan_sections_for_stubs): Rearrange code to avoid an
+	apparent compiler problem of not folding static constant integral
+	data members of elfcpp::Elf_sizes<32>.
+
+2010-01-13  Doug Kwan  <dougkwan@google.com>
+
+	* arm.cc (Arm_relobj::section_needs_reloc_stub_scanning,
 	Arm_relobj::section_needs_cortex_a8_stub_scanning,
 	Arm_relobj::scan_section_for_cortex_a8_erratum,
 	Arm_relobj::scan_span_for_cortex_a8_erratum): New methods.
